objects/WT_RelationshipGroup_Relation__c.object
<CustomObject>
    <description>A relationship between relationship account and person or business account.</description>
    <fields>
        <fullName>WT_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Group Relations (Account)</relationshipLabel>
        <relationshipName>Account_Account_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WT_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_MDM_Relationship_Group_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Relationship Group Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WT_Primary_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RelatedTOAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__ReciprocalRole__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Account Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__ReciprocalRole__c</referenceTo>
        <relationshipLabel>Relationship Group Relations</relationshipLabel>
        <relationshipName>Account_Account_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Primary Holder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Relationship Group Relation</label>
    <nameField>
        <displayFormat>AAR-{000000000}</displayFormat>
        <label>Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Group Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WT_OnCreationMustBeActive</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.WT_Switch_Settings__c.WT_Is_Validation_Rule_Active__c, NOT(WT_Active__c), 
ISNEW() )</errorConditionFormula>
        <errorDisplayField>WT_Active__c</errorDisplayField>
        <errorMessage>A Account Account Relationship cannot be created as Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_OnlySystemAdminhasModifyAccess</fullName>
        <active>true</active>
        <description>As per DBSFCRM- 1583, RG will managed by the data Stewart in Informatica.</description>
        <errorConditionFormula>AND($Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Only System administrator can create or edit a Relationship group.</errorMessage>
    </validationRules>
</CustomObject>